--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,10 @@
       "src": "/",
       "dest": "server.js"
     }
-  ]
+  ],
+  "build": {
+    "commands": [
+      "prisma generate"
+    ]
+  }
 }
