--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "prisma generate && echo 'No build step required'",
+    "build": "npm run build",
+    "vercel-build": "prisma generate && npm run build",
     "start": "nodemon server.js"
   },
   "keywords": [],
