--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "echo 'No build step required'",
+    "build": "npm run build",
     "start": "nodemon server.js"
   },
   "keywords": [],
@@ -14,10 +14,12 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.5.0",
+    "cloudinary": "^1.21.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "prisma": "^6.5.0"
   },
   "devDependencies": {
