--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm run build",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "vercel-build": "npx prisma generate"
   },
   "keywords": [],
   "author": "",
